--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ java {
 
 application {
     // Define the main class for the application.
-    mainClass = 'Main'
+    mainClass = 'mpkprojekt.Main'
 }
 
 tasks.named('test') {
@@ -42,6 +42,6 @@ tasks.named('test') {
 }
 jar {
     manifest {
-        attributes 'Main-Class': 'Main'
+        attributes 'Main-Class': 'mpkprojekt.Main'
     }
 }
